start of post examples and service 1 and 2 added

--- a/app/posts/post-examples/2020-10-12-beta.md
+++ b/app/posts/post-examples/2020-10-12-beta.md
@@ -1,11 +1,11 @@
 ---
-title: Apply – April 2018
+title: Beta
 description: Application and summary.
-date: 2018-04-30
+date: 2020-10-12
 related:
   items:
   - text: Prototype
-    href: https://bat-apply.herokuapp.com/v01/application
+    href: https://...
 ---
 
 
@@ -40,6 +40,7 @@ test test
 **Bold text**
 test test
 
+#### Page 1
 <img src="/images/example-post/02-search-results.png" alt="Italian Trulli">
 
 > Inset text
